fix<client>: scrollbar in windows

--- a/client/src/main.less
+++ b/client/src/main.less
@@ -9,6 +9,10 @@
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
 
+  ::-webkit-scrollbar {
+    display: none; /* Chrome Safari */
+  }
+
   body {
     margin: 0;
     padding: 0;
